# atypical_driving_snu

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  TODO.md  install_guide.txt  keti_pangyo_path3.csv  log.txt  package.xml  seoul_park_interpolated_waypoint.csv
doc/: Doxyfile
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _global_planner_8cpp.html  _global_planner_8cpp__incl.map  _global_planner_8cpp__incl.md5  _global_planner_8cpp_source.html  _global_planner_8h.html  _global_planner_8h__dep__incl.map  _global_planner_8h__dep__incl.md5  _global_planner_8h__incl.map  _global_planner_8h__incl.md5  _global_planner_8h_source.html  _local_planner_8cpp.html  _local_planner_8cpp__incl.map  _local_planner_8cpp__incl.md5  _local_planner_8cpp_source.html  _local_planner_8h.html  _local_planner_8h__dep__incl.map  _local_planner_8h__dep__incl.md5  _local_planner_8h__incl.map  _local_planner_8h__incl.md5  _local_planner_8h_source.html  _planner_core_8h.html  _planner_core_8h__dep__incl.map  _planner_core_8h__dep__incl.md5  _planner_core_8h__incl.map  _planner_core_8h__incl.md5  _planner_core_8h_source.html  _wrapper_8cpp.html  _wrapper_8cpp__incl.map  _wrapper_8cpp__incl.md5  _wrapper_8cpp_source.html  _wrapper_8h.html  _wrapper_8h__dep__incl.map  _wrapper_8h__dep__incl.md5  _wrapper_8h__incl.map  _wrapper_8h__incl.md5  _wrapper_8h_source.html  (+197 more)
include/atypical_planner/: .PlannerCore.h.swp  GlobalPlanner.h  LocalPlanner.h  PlannerCore.h  Wrapper.h
include/optimization_module/: QP.hpp  dimension.h  ilqr.hpp  initial_guess.hpp  parameter.hpp  problem.hpp  problem_description.h  system_base_atypical.h
lane/: .waypoint_airsim.csv.swp  .waypoint_keti0626.csv.swp  interpolated_kiapi_pg1.csv  interpolated_kiapi_pg11.csv  interpolated_kiapi_pg2.csv  interpolated_kiapi_pg_saturday.csv  interpolated_kiapi_pg_test.csv  interpolated_waypoint_parking_lot8.csv  interpolated_yugokri_path1.csv  interpolated_yugokri_path1_id.csv  kiapi_path1.csv  kiapi_path2.csv  lane_track1.csv  lane_track2.csv  waypoint.csv  waypoint_airsim.csv  waypoint_keti0626.csv  waypoint_kiapi2.csv
launch/: .simulation_airsim.launch.swo  .simulation_airsim.launch.swp  .test_without_Rosbag.launch.swp  atypical_driving_snu.launch  atypical_driving_snu_ktl.launch  atypical_driving_snu_maponly.launch  atypical_driving_snu_yugokri.launch  bag_feeder_example.launch  integration_server.launch  simulation_airsim.launch  test1011.launch  test_async_pipeline.launch  test_async_pipeline_airsim.launch  test_async_pipeline_keti2.launch  test_async_pipeline_keti3.launch  test_empty.launch  test_integration.launch  test_keti.launch  test_keti2.launch  test_with_virtual_environment.launch  test_without_Rosbag.launch  track1.launch  track10.launch  track2.launch  track3.launch  track4.launch  track5.launch  track6.launch  track7.launch  track8.launch  track9.launch
launch/map_gen/: run_rtabmap_yugokri.launch  see_yugokri.launch
launch/occupancy2d/: .costmap_2d.launch.swp  costmap_2d.launch  costmap_3d.launch  example_params.yaml  filter.yaml  test_costmap_2d.launch
launch/rqt_multiplot_config/: rqt_multiplot.xml
launch/rviz_config/: config.rviz  keti.rviz  ktl.rviz
log/: log_corridor.txt  log_input.txt  log_mpc.txt  log_state.txt  logger.m  matlab.mat
log/predictor/: observation_0.txt  observation_1.txt  observation_107983.txt  observation_109208.txt  observation_109813.txt  observation_110093.txt  observation_110264.txt  observation_110304.txt  observation_110370.txt  observation_112113.txt  observation_112479.txt  observation_112612.txt  observation_122525.txt  observation_122553.txt  observation_122556.txt  (+236 more)
matlab/: KIAPI2.csv  KIAPI3.csv  angDiff.m  findLaneWidth.m  findMidPoint.m  findParents.m  getCloestPointToLanePath.m  getClosestPointToLine.m  laneTreeDFS.m  lane_maker.m  sliding_test.m  sliding_test.m~  test.m
monitor/: monitor.perspective  monitoring.m  originalArisimScenario.bag  real_track1.bag  real_track10.bag  real_track2.bag  real_track3.bag  real_track4.bag  real_track5.bag  real_track6.bag  real_track7.bag  real_track8.bag  real_track9.bag  track1.bag  track10.bag  track2.bag  track3.bag  track4.bag  track5.bag  track6.bag  track7.bag  track8.bag  track9.bag
param/: MPC_weight.yaml  MPC_weight3.yaml  MPC_weight4.yaml  MPC_weight5.yaml  airsim.yaml  goal_airsim.yaml  goal_keti.yaml  kiapi_PG.yaml  yugokri.yaml
src/: .Wrapper.cpp.swn  .Wrapper.cpp.swo  .Wrapper.cpp.swp  GlobalPlanner.cpp  LocalPlanner.cpp  PlannerCore.cpp  Wrapper.cpp
test/: main.cpp  main_mapper.cpp  stopping.cpp  virtual_environment_generator.cpp
worlds/: auto_drive.bt  map_reader.m  occupancy_grid.bag  occupancy_inflated_seq.bag
(+126 files in other folders)
